# Tongi

./: .gitignore  Jenkinsfile  README.md  codemagic.yaml  i18n.json  register.json
backend/: CMakeLists.txt  Dockerfile  Dockerfile.test  Jenkinsfile  Makefile  README.md  config.json  docker-compose.yml  main.cpp  run-tests.ps1  run-tests.sh
backend/controllers/data/: data_controller.cpp  data_controller.h
backend/controllers/health/: health_controller.cpp  health_controller.h
backend/controllers/stt/: stt_controller.cpp  stt_controller.h
backend/controllers/tts/: tts_controller.cpp  tts_controller.h
backend/controllers/ttt/: ttt_controller.cpp  ttt_controller.h
backend/models/data/: data_model.h
backend/server/: server.cpp  server.h
backend/services/data/: data_service.cpp  data_service.h
backend/services/stt/: stt_service.cpp  stt_service.h
backend/services/tts/: tts_service.cpp  tts_service.h
backend/services/ttt/: ttt_service.cpp  ttt_service.h
backend/tests/: CMakeLists.txt  README.md  integration_tests.cpp  run_tests.ps1  simple_api_test.ps1  test_data_service.cpp  test_integration.cpp  test_tongi_server.cpp
backend/utils/: json_utils.h
frontend/: Jenkinsfile  flutter_launcher_icons.yaml  pubspec.yaml
frontend/android/app/: build.gradle.kts  proguard-rules.pro
frontend/android/app/src/main/: AndroidManifest.xml
frontend/ios/: Podfile
frontend/ios/Runner/: Info.plist
frontend/lib/: main.dart  offline_check_controller.dart
frontend/lib/addOns/: background.dart
frontend/lib/components/: language_selector.dart  text_translation.dart
frontend/lib/components/dashboard/: navbar.dart
frontend/lib/controllers/: translation_controller.dart
frontend/lib/core/: tongi_colors.dart  tongi_languages.dart  tongi_styles.dart
frontend/lib/data/services/: translation_service.dart
frontend/lib/data/services/camera/: image_translation_service.dart
frontend/lib/data/utils/: permissions.dart
frontend/lib/logic/controllers/: auidio_translation_controller.dart  lang_selector_controller.dart  model_manager_controller.dart  offline_check_controller.dart  past_text_translation_controller.dart  speech_translation_comtroller.dart  text_translation_controller.dart  translation_controller.dart
frontend/lib/logic/models/: text_detection_result.dart  translated_block.dart
frontend/lib/logic/services/: translation_service.dart
frontend/lib/logic/services/audio/: record_service.dart  speech_service.dart  transcription_service.dart
frontend/lib/logic/services/camera/: image_translation_service.dart  overlay_capturer.dart
frontend/lib/logic/services/text/: local_translation_service.dart  text_translation.dart
frontend/lib/logic/utils/: coordinates.dart  utils.dart
frontend/lib/screens/: audio_screen.dart  camera_screen.dart  dashboard_screen.dart  main_screen.dart  settings_screen.dart  terms_conditions_scren.dart  text_screen.dart
frontend/lib/screens/camera/: camera_screen.dart  camera_view.dart  detector_view.dart  gallery_manager.dart  overlay_capturer.dart  text_detector_painter.dart
frontend/lib/screens/settings/: settings_about.dart  settings_lang.dart  settings_models_screen.dart  settings_notifications.dart
frontend/lib/services/: model_manager_service.dart  text_translation.dart  text_translation_service.dart
frontend/lib/ui/core/: tongi_colors.dart  tongi_languages.dart  tongi_styles.dart
frontend/lib/ui/painters/: camera_translation_painter.dart
frontend/lib/ui/screens/: audio_screen.dart  main_screen.dart  settings_screen.dart  t_screen.dart  terms_conditions_scren.dart  text_screen.dart
frontend/lib/ui/screens/camera/: camera_screen.dart  camera_view.dart  detector_view.dart  gallery_view.dart
frontend/lib/ui/screens/settings/: settings_about.dart  settings_lang.dart  settings_models_screen.dart  settings_notifications.dart  terms_conditions_scren.dart
frontend/lib/ui/widgets/: copy_button.dart  language_selector.dart
frontend/lib/ui/widgets/audio/: audio_translation.dart  record_button.dart
frontend/lib/ui/widgets/camera/: camera_lang_selector.dart
frontend/lib/ui/widgets/dashboard/: tongi_appbar.dart  (+1 more)
frontend/lib/widgets/: audio_translation.dart  camera_lang_selector.dart  copy_button.dart  language_selector.dart  record_button.dart  text_suggestions.dart
frontend/lib/widgets/audio/: audio_translation.dart  record_button.dart
frontend/lib/widgets/camera/: camera_lang_selector.dart
frontend/lib/widgets/dashboard/: tongi_appbar.dart  tongi_navbar.dart
frontend/lib/widgets/text/: text_translation.dart
frontend/lib/widgets/transition/: loading_indicator.dart
frontend/macos/Flutter/: GeneratedPluginRegistrant.swift
frontend/test/: test_runner.dart
frontend/test/inputs/: microphone_functionality_test.dart  microphone_test.dart
frontend/test/integration/: text_field_integration_test.dart
frontend/test/unit/: microphone_record_test.dart  text_editing_controller_test.dart
frontend/test/widgets/: appbar_test.dart  microphone_test.dart  navbar_test.dart  text_field_test.dart
servers/: language.json  models.json  run_all.bat  run_all_docker.bat  run_stt.bat  run_tts.bat  run_ttt.bat
servers/stt_server/: Jenkinsfile  __init__.py  app.py  dockerfile  requirements.txt
servers/stt_server/controllers/: stt_controller.py
servers/stt_server/models/: stt_models.py
servers/stt_server/services/: es.py  ex.py  stt_service.py
servers/stt_server/test/: test_stt_service.py
servers/tts_server/: .dockerignore  Jenkinsfile  app.py  dockerfile  requirements.txt
servers/tts_server/config/: azure_voices.json
servers/tts_server/controllers/: tts_controller.py
servers/tts_server/models/: tts_models.py
servers/tts_server/services/: tts_service.py
servers/tts_server/test/: test.py  test_tts_service.py
servers/ttt_server/: .dockerignore  Jenkinsfile  __init__.py  app.py  dockerfile  requirements.txt
servers/ttt_server/controllers/: ttt_controller.py
servers/ttt_server/models/: ttt_models.py
servers/ttt_server/services/: ttt_service.py
servers/ttt_server/test/: test_ttt_service.py
(+8 files in other folders)
